[workspace]
resolver = "2"
members = [
  "packages/cargo/*"
]

[workspace.dependencies]
cw-utils = "1.0.3"
cw2 = "1.1.2"
cw20 = "1.1.2"
cosmwasm-std = "1.5.5"
cosmwasm-schema = "1.5.5"
schemars = "0.8"
sei-cosmwasm = "0.4.15"
thiserror = "1"
borsh = { version = "1", features = ["derive"] }
bytemuck = { version = "1.15", features = ["derive", "min_const_generics"] }
serde = "1"
serde_json = { version = "1" }
convert_case = "0.6"
itertools = "0.12"
deunicode = "1"
lazy-regex = "3"
regex = "1"
bech32 = "0.9"
cw-multi-test = "0.20"
static_assertions = "1.1.0"
hex = "0.4.3"
bnum = "0.10" # Cosmwasm dependency
tiny-keccak = "2"
